--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
     network_mode: "none"
     volumes:
       - ./_work:/work:rw
+    tmpfs:
+      - /tmp:mode=1777
     working_dir: /work
 
   go-runner:
